# brain-tumor-classification-system

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  dvc.yaml  infer.py  main.py  pyproject.toml
.github/workflows/: ci.yml
api/: main.py  routes.py  schemas.py
brain_tumor_classification/: evaluate.py  model.py  train.py
brain_tumor_classification/api/: routes.py  schemas.py
brain_tumor_classification/data/: compute_stats.py  data.py  split.py  transforms.py
brain_tumor_classification/utilities/: mlflow_logger_getter.py  model_getter.py  model_loader.py
brain_tumor_detection/data/: split.py
conf/: config.yaml  infer.yaml
conf/data/: default.yaml
conf/eval/: default.yaml
conf/infer/: default.yaml
conf/logger/: default.yaml
conf/model/: default.yaml
conf/training/: default.yaml
conf/transform/: default.yaml
conf/triton/: default.yaml
data/: .gitignore  raw.dvc
docker/: .dockerignore  Dockerfile_api
envs/: .minio.env.example
scripts/: download_data.sh  export_onnx.py  export_tensorrt.sh  make_triton_config.py  model_loader.py
scripts/exports/: export_onnx.py  get_module.py
services/: constants.py  postprocessing.py  preprocessing.py  triton_client.py
triton/models/brain_tumor_classification/: config.pbtxt
triton/models/my_onnx_model/: config.pbtxt
