[project]
name = "pythonproject6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.8",
    "lightning>=2.6.4",
    "numpy>=2.4.6",
    "torch>=2.12.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.27.0",
    "ultralytics>=8.4.53",
]

[dependency-groups]
mlops = [
    "dvc[s3]>=3.67.1",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
]
