[project]
name = "pythonproject6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.8",
    "fastapi>=0.136.1",
    "lightning>=2.6.4",
    "numpy>=2.4.6",
    "onnx>=1.21.0",
    "onnxruntime>=1.26.0",
    "python-multipart>=0.0.29",
    "seaborn>=0.13.2",
    "torch>=2.12.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.27.0",
    "tritonclient[http]>=2.68.0",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "fire>=0.7.1",
    "pre-commit>=4.6.0",
]
mlops = [
    "dvc[s3]>=3.67.1",
    "hydra-core>=1.3.2",
    "kaggle>=2.2.0",
    "mlflow>=3.12.0",
    "omegaconf>=2.3.0",
    "onnxscript>=0.7.0",
]
